# presentations

./: README.md
.github/ISSUE_TEMPLATE/: talk_proposals.md
2023-06-28/embedded_rust_microbitv2_presentation/: README.md  header.tex  presentation.md
2023-08-31/Skalierbares Design prozeduraler Makros/: dark.tmTheme  presentation.typ
2024-09-26/folding-laundry/: Cargo.toml  README.md
2024-09-26/folding-laundry/src/: a_user.rs  b_user.rs  c_user.rs  d_flatten.rs  e_parallel_processing.rs  f_zip.rs  g_tips_and_tricks.rs  g_windows.rs  h_async_addendum.rs  lib.rs
2024-7-25/machine-learning-rust/: Cargo.toml  gradient-descend.typ
2024-7-25/machine-learning-rust/src/: gradient.rs  main.rs
2025-05-22/: .env  Cargo.toml  README.md  dashboard.json
2025-05-22/src/: business.rs  cfg.rs  main.rs  otel.rs  server.rs
